Add missing tests to biz.aQute.repository AllTests (and fix breaking one)